--- a/res/browser/firebase.json
+++ b/res/browser/firebase.json
@@ -1,6 +1,6 @@
 {
-  "apiKey": "AIzaSyDoTopWz0hKOfyb0TLE0IdJkhA8glXu9I8",
-  "appId": "1:83837424328:web:f5d3d2af732be47ff64bfd",
-  "messagingSenderId": "83837424328",
-  "projectId": "wooportal-e80d8"
+  "apiKey": "AIzaSyAe_b7c4NuFFZzuxB98nP46ixL-9VH8IyA",
+  "appId": "1:13000676024:web:942d51a3c730a9bc4ada4d",
+  "messagingSenderId": "13000676024",
+  "projectId": "jugendkompass-id"
 }
