--- a/res/ios/GoogleService-Info.plist
+++ b/res/ios/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
     <key>API_KEY</key>
-    <string>AIzaSyDhugSPmI27zUIr8inLx1XYzHv40sSaz_Q</string>
+    <string>AIzaSyCwNlOW2Uw5k5riWrVD_UHuWYKRq6o2lmg</string>
 
     <key>BUNDLE_ID</key>
     <string>de.codeschluss.jugendkompass</string>
@@ -12,12 +12,12 @@
     <true/>
 
     <key>GCM_SENDER_ID</key>
-    <string>83837424328</string>
+    <string>13000676024</string>
 
     <key>GOOGLE_APP_ID</key>
-    <string>1:83837424328:ios:e36d7e3a33d595dff64bfd</string>
+    <string>1:13000676024:ios:9ffd5bb661a5286b4ada4d</string>
 
     <key>PROJECT_ID</key>
-    <string>wooportal-e80d8</string>
+    <string>jugendkompass-id</string>
   </dict>
 </plist>
