--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jugendkompass",
   "description": "An informative portal for Dinslakens youth",
-  "homepage": "https://jugendkompass-din.de",
+  "homepage": "https://www.jugendkompass-din.de",
   "version": "0.3.0",
   "author": {
     "name": "codeschluss",
